Update encoding and src fix

--- a/index.html
+++ b/index.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
 <meta charset="utf-8" />
 <title>Funny Face 2015</title>
-<script src="/node_modules/jquery/dist/jquery.min.js"></script>
-<link rel="stylesheet" href="css/reset.css" />
-<link rel="stylesheet" href="css/text.css" />
-<link rel="stylesheet" href="css/960.css" />
-<link rel="stylesheet" href="css/demo.css" />
-<link rel="stylesheet" href="css/party.css" />
-<link rel="stylesheet" href="/node_modules/formstone/dist/css/upload.css">
-<script src="/node_modules/formstone/dist/js/core.js"></script>
-<script src="/node_modules/formstone/dist/js/upload.js"></script>
-<link rel="stylesheet" href="/css/style.css">
+<script src="./node_modules/jquery/dist/jquery.min.js"></script>
+<link rel="stylesheet" href="./css/reset.css" />
+<link rel="stylesheet" href="./css/text.css" />
+<link rel="stylesheet" href="./css/960.css" />
+<link rel="stylesheet" href="./css/demo.css" />
+<link rel="stylesheet" href="./css/party.css" />
+<link rel="stylesheet" href="./node_modules/formstone/dist/css/upload.css">
+<script src="./node_modules/formstone/dist/js/core.js"></script>
+<script src="./node_modules/formstone/dist/js/upload.js"></script>
+<link rel="stylesheet" href="./css/style.css">
 
 
 
@@ -71,7 +71,7 @@
         if(files[i].size > 300000){
           alert('Размер изображения выше 300кб')
         }
-        html +='<img id="imgYou" style="width:100%;position:center;" src="/uploads/' + files[i].name + '" alt="">'
+        html +='<img id="imgYou" style="width:100%;position:center;" src="./uploads/' + files[i].name + '" alt="">'
       } 
       $("#res").append(html);
     };
@@ -183,19 +183,19 @@
 		<div id="picture" class="picture">
         	<div id="res" class="picture">
             <!-- шапки -->
-            <img id="HAT_1" src="/images/accessories/HAT_1.png" style="position:absolute;display:none; margin-top: 0%; margin-left: 70px;height: 25%;"/>
-            <img id="HAT_2" src="/images/accessories/HAT_2.png" style="position:absolute;display:none; margin-top: 0%; margin-left: 70px;height: 25%;"/>
-            <img id="HAT_3" src="/images/accessories/HAT_3.png" style="position:absolute;display:none; margin-top: 0%; margin-left: 70px;height: 40%;"/>
-            <img id="HAT_4" src="/images/accessories/HAT_4.png" style="position:absolute;display:none; margin-top: 0%; margin-left: 100px;height: 25%;"/>
+            <img id="HAT_1" src="./images/accessories/HAT_1.png" style="position:absolute;display:none; margin-top: 0%; margin-left: 70px;height: 25%;"/>
+            <img id="HAT_2" src="./images/accessories/HAT_2.png" style="position:absolute;display:none; margin-top: 0%; margin-left: 70px;height: 25%;"/>
+            <img id="HAT_3" src="./images/accessories/HAT_3.png" style="position:absolute;display:none; margin-top: 0%; margin-left: 70px;height: 40%;"/>
+            <img id="HAT_4" src="./images/accessories/HAT_4.png" style="position:absolute;display:none; margin-top: 0%; margin-left: 100px;height: 25%;"/>
             <!-- ОЧКИ -->
-            <img id="GLASSES_1" src="/images/accessories/GLASSES_1.png" style="position:absolute;display:none; margin-top: 15%; margin-left: 70px;height: 10%;"/>
-            <img id="GLASSES_2" src="/images/accessories/GLASSES_2.png" style="position:absolute;display:none; margin-top: 15%; margin-left: 111px;height: 10%;"/>
-            <img id="GLASSES_3" src="/images/accessories/GLASSES_3.png" style="position:absolute;display:none; margin-top: 15%; margin-left: 112px;height: 10%;"/>
+            <img id="GLASSES_1" src="./images/accessories/GLASSES_1.png" style="position:absolute;display:none; margin-top: 15%; margin-left: 70px;height: 10%;"/>
+            <img id="GLASSES_2" src="./images/accessories/GLASSES_2.png" style="position:absolute;display:none; margin-top: 15%; margin-left: 111px;height: 10%;"/>
+            <img id="GLASSES_3" src="./images/accessories/GLASSES_3.png" style="position:absolute;display:none; margin-top: 15%; margin-left: 112px;height: 10%;"/>
             <!-- усы -->
-            <img id="BEARD_1" src="/images/accessories/BEARD_1.png" style="position:absolute;display:none; margin-top: 25%; margin-left: 70px;"/>
-            <img id="BEARD_2" src="/images/accessories/BEARD_2.png" style="position:absolute;display:none; margin-top: 25%; margin-left: 100px;height: 40%;"/>
-            <img id="BEARD_3" src="/images/accessories/BEARD_3.png" style="position:absolute;display:none; margin-top: 22%; margin-left: 60px; height: 20%;"/>
-            <img id="BEARD_4" src="/images/accessories/BEARD_4.png" style="position:absolute;display:none; margin-top: 24%; margin-left: 60px; height: 17%;"/>
+            <img id="BEARD_1" src="./images/accessories/BEARD_1.png" style="position:absolute;display:none; margin-top: 25%; margin-left: 70px;"/>
+            <img id="BEARD_2" src="./images/accessories/BEARD_2.png" style="position:absolute;display:none; margin-top: 25%; margin-left: 100px;height: 40%;"/>
+            <img id="BEARD_3" src="./images/accessories/BEARD_3.png" style="position:absolute;display:none; margin-top: 22%; margin-left: 60px; height: 20%;"/>
+            <img id="BEARD_4" src="./images/accessories/BEARD_4.png" style="position:absolute;display:none; margin-top: 24%; margin-left: 60px; height: 17%;"/>
           </div>
         </div>
   </div>
